<resources>
    <string name="app_name">Login Form</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="our_services">our_services</string>
    <string name="fill_form">Fill Form</string>
    <string name="our_services2">Our services</string>
    <string name="disclaimer">disclaimer</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="home">Home</string>
    <string name="services_we_provide">Services We Provide</string>
    <string name="contact_us">contact us</string>
    <string name="signout">Signout</string>
    <string name="noname">The material on our App has been prepared and published for general information only. There is no effort or intention to solicit new clients or new engagements from existing clients by way of this mobile application.</string>
    <string name="noname2">The information contained in this app is provided by Free Legal Help as general information which may or may not reflect the most current legal developments. This information is not intended to constitute, and should not be considered, legal reference or legal advice. Free Legal Help does not sponsor reliance upon, or accept responsibility for the information Free Legal Help provides or for the way in which this information should be used, or any actions taken in consequence of the use of such information. Moreover, Free Legal Help doesn\'t give any guarantees, undertaking or warranties concerning the accuracy, completeness or up-to-date nature of the information provided on this application.</string>
    <string name="noname3">Communication of information by or through this app and your receipt or use of such information is not intended to create an attorney-client relationship with Free Legal Help or any of the Firm\'s attorneys.The creation of the attorney-client relationship would require direct, personal contact between you and our firm through one or more attomeys and would also require an explicit agreement in the form of an engagement letter by the firm that confirms that an attorney client relationship is established and the terms of that relationship. You should not act or rely upon information contained or given to you through this mobile application without specifically seeking professional legal advice.</string>
    <string name="user_acknowledgement">User Acknowledgement :</string>
    <string name="noname4">By proceeding further and clicking on the \'Agree\' button herein below, I acknowledge that I of my own accord wish to know more about Free Legal Help for my own information and use, I further acknowledge that there has been no solicitation, invitation or inducement of any sort whatsoever from Free Legal Help or any of its members to create an Attorney-Client relationship through this app. I further acknowledge having read and understood the Disclaimer mentioned above,</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>