<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".disclaimer2"
    android:fitsSystemWindows="true"
    android:minWidth="19dp">



<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7FFFFFF"
            app:subtitleTextColor="#0A0A0A"
            app:titleTextColor="#111111" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/Disclaimer"
            android:textColor="#D4AF37"
            android:textSize="40sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:gravity="fill_vertical"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:paddingBottom="1dp"
            android:text="@string/noname"
            android:textColor="#5b3e31"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:gravity="fill_vertical"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:paddingBottom="1dp"
            android:text="@string/noname2"
            android:textColor="#5b3e31"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:gravity="fill_vertical"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:text="@string/noname3"
            android:textColor="#5b3e31"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_acknowledgement"
            android:textColor="#5b3e31"
            android:gravity="fill_vertical"
            android:paddingTop="5dp"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:textSize="27sp" />
<!--            Your code here -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:gravity="fill_vertical"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:text="@string/noname4"
            android:textColor="#5b3e31"
            android:textSize="20sp"
            />
      <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/agree"
            android:textColorHint="#5b3e31"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="#D4AF37"
            android:hint="@string/agree"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disagree"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#5b3e31"
            android:background="#D4AF37"
            android:hint="@string/disagree"
            />


    </LinearLayout>
</ScrollView>
<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigation_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/header"
    app:menu="@menu/drawer_menu">
</com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>